lab1/Test/L1-A-7-22.output
Error Type A at Line 14
Error Type A at Line 28
Error Type A at Line 30
Error Type A at Line 60
